--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <body>
-<h1>James Emerick CSE 210 Projects:</h1>
+<h1>Welcome to James Emerick's CSE 210 Projects Homepage</h1>
 <ul>
-  <g href="CSE210"CSE210>
+  <li><a href="CSE210"CSE210></a></li>
 </ul>
 <body>
 <html>
