--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
-<body>
-<h1>Welcome to James Emerick's CSE 210 Projects Homepage</h1>
-<ul>
-  <li><a href="CSE210"CSE210></a></li>
-</ul>
-<body>
-<html>
+  <body>
+    <h1>Welcome to James Emerick's CSE 210 Projects Homepage</h1>
+    <ul>
+      <li><a href="prove/Develop02" Develop02></a></li>
+    </ul>
+    <body>
+      <html></html>
+    </body>
+  </body>
+</html>
