--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
   <body>
     <h1>Welcome to James Emerick's CSE 210 Projects Homepage</h1>
     <ul>
-      <li><a href="prove/Develop02" download="prove/Develop02"></a></li>
+      <li>
+        <a href="prove/Develop02" download="prove/Develop02" Develop 02></a>
+      </li>
     </ul>
     <body>
       <html></html>
