Finished Group Proj

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <h1>Welcome to James Emerick's CSE 210 Projects Homepage</h1>
     <ul>
       <li>
-        <a href="prove/Develop02" download="prove/Develop02" Develop 02></a>
+        <a href="prove/Develop02/" Develop 02></a>
       </li>
     </ul>
     <body>
