--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@
     <h1>Welcome to James Emerick's CSE 210 Projects Homepage</h1>
     <ul>
       <li>
-        <a href="prove/Develop02/" Develop 02></a>
+        <a href="prove/Develop02/Develop02.csproj" Develop 02></a>
+      </li>
+      <li>
+        <a href="prove/Develop02/Journal.cs" Develop 02></a>
+      </li>
+      <li>
+        <a href="prove/Develop02/journal.txt" Develop 02></a>
+      </li>
+      <li>
+        <a href="prove/Develop02/NewEntry.cs" Develop 02></a>
+      </li>
+      <li>
+        <a href="prove/Develop02/Program.cs" Develop 02></a>
       </li>
     </ul>
     <body>
